--- a/CGASSN2/CGASSN2.vcxproj.filters
+++ b/CGASSN2/CGASSN2.vcxproj.filters
@@ -30,16 +30,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fireloop.h">
-      <Filter>소스 파일</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="firepot.h">
-      <Filter>소스 파일</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="lion.h">
-      <Filter>소스 파일</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="main.h">
-      <Filter>소스 파일</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
